@@ -4,7 +4,11 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04e: *********************************
 
-IMP: (2/21/06, GVG) More code for auto fill generator. First version working with hierarchy.
+BUG: (2/21/06, DN) JELIB reader silently reads longs as ints.
+FIX: Use Long.valueOf(s) which throws exception on error.
+
+BUG: (2/21/06, DN) Assertion deleting NodeInst (Bug #823).
+FIX: Don't assume that exportUsage.length == cellUsage.length, because subcell may be used without exports.
 
 BUG: (2/21/06, DN) Protection database by ReadWriteLock leads to deadlocks and slowness.
 FIX: Remove this lock. GUI can access modifying database again. Netlists are fully computed in database thread.
